--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,4 +55,6 @@ exclude = '''
 line_length = 119
 
 [tool.coverage.report]
-exclude = ["if __name__ == .__main__.:"]
+exclude_also = [
+"if __name__ == .__main__.:",
+]
