--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,5 +57,8 @@ line_length = 119
 
 [tool.coverage.report]
 exclude_also = [
-"if __name__ == .__main__.:",
+    "if __name__ == .__main__.:",
+    "import",
+    "from",
+    "@abstractmethod"
 ]
